hphp/hack/test/typecheck/must_be_arraykey.php.exp
File "must_be_arraykey.php", line 5, characters 14-22:
Some type constraint(s) here are violated (Typing[4323])
File "hackarray.hhi", line 14, characters 30-30:
'T' is a constrained type parameter
File "hackarray.hhi", line 14, characters 35-42:
Expected arraykey
File "must_be_arraykey.php", line 5, characters 21-21:
But got I
